plugins {
    id 'java'
    id 'application'
}

group = 'net.minecraft'
version = '1.21.10'

// LWJGL version and natives configuration
def lwjglVersion = '3.3.3'
def lwjglNatives = System.getProperty('os.name').toLowerCase().contains('mac') 
    ? (System.getProperty('os.arch').contains('aarch64') ? 'natives-macos-arm64' : 'natives-macos')
    : System.getProperty('os.name').toLowerCase().contains('win') 
        ? (System.getProperty('os.arch').contains('64') ? 'natives-windows' : 'natives-windows-x86')
        : (System.getProperty('os.arch').contains('arm') || System.getProperty('os.arch').contains('aarch64')) 
            ? 'natives-linux-arm64' 
            : 'natives-linux'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    // Minecraft libraries (primary source for Mojang dependencies)
    maven { 
        url 'https://libraries.minecraft.net'
        content {
            includeGroup 'com.mojang'
        }
    }
    // JitPack for open-source Mojang libraries
    maven { 
        url 'https://jitpack.io'
        content {
            includeGroup 'com.github.Mojang'
        }
    }
    // Forge mirrors for Mojang libraries
    maven { 
        url 'https://maven.minecraftforge.net/'
        content {
            includeGroup 'com.mojang'
            includeGroup 'net.minecraftforge'
        }
    }
    // Fabric Maven for Fabric API
    maven {
        url 'https://maven.fabricmc.net/'
    }
}

configurations.all {
    resolutionStrategy {
        force 'com.mojang:authlib:6.0.55'
        force 'com.mojang:brigadier:1.3.10'
        force 'com.mojang:datafixerupper:8.0.16'
        // Disallow older Authlib versions pulled transitively
        eachDependency { details ->
            if (details.requested.group == 'com.mojang' && details.requested.name == 'authlib' && details.requested.version != '6.0.55') {
                details.useVersion '6.0.55'
                details.because 'Align with Minecraft 1.21.10 sources that use GameProfile.id()/name() accessors'
            }
        }
    }
}

// Minecraft 1.21.10 dependencies
dependencies {
    // Mojang libraries
    implementation 'com.mojang:brigadier:1.3.10'
    implementation 'com.mojang:datafixerupper:8.0.16'
    implementation 'com.mojang:authlib:6.0.55'
    implementation 'com.mojang:logging:1.2.7'
    implementation 'com.mojang:jtracy:1.0.29'
    implementation 'com.mojang:blocklist:1.0.10'
    implementation 'com.mojang:patchy:2.2.10'
    implementation 'com.mojang:text2speech:1.17.9'
    
    // Google libraries
    implementation 'com.google.guava:guava:32.1.2-jre'
    // Using Gson 2.11+ for Strictness enum
    implementation 'com.google.code.gson:gson:2.11.0'
    
    // Apache Commons
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.apache.commons:commons-compress:1.26.0'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'org.apache.httpcomponents:httpcore:4.4.16'
    
    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.22.1'
    
    // Netty
    implementation 'io.netty:netty-all:4.1.97.Final'
    
    // FastUtil
    implementation 'it.unimi.dsi:fastutil:8.5.12'
    
    // JNA (Java Native Access)
    implementation 'net.java.dev.jna:jna:5.14.0'
    implementation 'net.java.dev.jna:jna-platform:5.14.0'
    
    // JOML (Java OpenGL Math Library)
    implementation 'org.joml:joml:1.10.5'
    
    // JOptSimple (command line parsing)
    implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
    
    // Microsoft MSAL4J for authentication
    implementation 'com.microsoft.azure:msal4j:1.14.3'
    
    // JetBrains annotations
    implementation 'org.jetbrains:annotations:24.1.0'
    
    // LZMA SDK for compression
    implementation 'org.lz4:lz4-java:1.8.0'
    
    // OSHI for system info
    implementation 'com.github.oshi:oshi-core:6.4.10'
    
    // ICU4J for Unicode support
    implementation 'com.ibm.icu:icu4j:74.2'
    
    // Java-ObjC-Bridge for macOS Objective-C interop
    implementation 'ca.weblite:java-objc-bridge:1.2'
    
    // JOrbis - Ogg Vorbis audio decoder
    implementation 'org.jcraft:jorbis:0.0.17'
    
    // ===== CLIENT DEPENDENCIES =====
    
    // LWJGL - Lightweight Java Game Library (OpenGL, GLFW, OpenAL, etc.)
    implementation platform("org.lwjgl:lwjgl-bom:${lwjglVersion}")
    implementation 'org.lwjgl:lwjgl'
    implementation 'org.lwjgl:lwjgl-glfw'
    implementation 'org.lwjgl:lwjgl-opengl'
    implementation 'org.lwjgl:lwjgl-openal'
    implementation 'org.lwjgl:lwjgl-stb'
    implementation 'org.lwjgl:lwjgl-tinyfd'
    implementation 'org.lwjgl:lwjgl-freetype'
    implementation 'org.lwjgl:lwjgl-jemalloc'
    
    // LWJGL natives
    runtimeOnly "org.lwjgl:lwjgl::${lwjglNatives}"
    runtimeOnly "org.lwjgl:lwjgl-glfw::${lwjglNatives}"
    runtimeOnly "org.lwjgl:lwjgl-opengl::${lwjglNatives}"
    runtimeOnly "org.lwjgl:lwjgl-openal::${lwjglNatives}"
    runtimeOnly "org.lwjgl:lwjgl-stb::${lwjglNatives}"
    runtimeOnly "org.lwjgl:lwjgl-tinyfd::${lwjglNatives}"
    runtimeOnly "org.lwjgl:lwjgl-freetype::${lwjglNatives}"
    runtimeOnly "org.lwjgl:lwjgl-jemalloc::${lwjglNatives}"
    
    // Fabric Loader (for annotations like @Environment and @EnvType)
    implementation 'net.fabricmc:fabric-loader:0.16.9'
    
    // Note: Fabric API stub interfaces are included in the source tree under net/fabricmc/fabric/api/
    // These are empty interfaces that satisfy the compilation requirements
}

sourceSets {
    main {
        java {
            srcDirs = ['.']
            exclude 'gradle/**'
            exclude 'build/**'
            exclude '.git/**'
            exclude '.idea/**'
            // Exclude bundled Mojang sources that shadow Maven dependencies
            exclude 'com/mojang/authlib/**'
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

// Server run configuration
application {
    mainClass = 'net.minecraft.server.Main'
}

// Common JVM arguments for server tasks
def serverJvmArgs = [
    '-Xmx2G',
    '-Xms1G',
    '-XX:+UseG1GC',
    '-XX:+ParallelRefProcEnabled',
    '-XX:MaxGCPauseMillis=200',
    '-XX:+UnlockExperimentalVMOptions',
    '-XX:+DisableExplicitGC',
    '-XX:G1NewSizePercent=30',
    '-XX:G1MaxNewSizePercent=40',
    '-XX:G1HeapRegionSize=8M',
    '-XX:G1ReservePercent=20',
    '-XX:G1HeapWastePercent=5',
    '-XX:G1MixedGCCountTarget=4',
    '-XX:InitiatingHeapOccupancyPercent=15',
    '-XX:G1MixedGCLiveThresholdPercent=90',
    '-XX:G1RSetUpdatingPauseTimePercent=5',
    '-XX:SurvivorRatio=32',
    '-XX:+PerfDisableSharedMem',
    '-XX:MaxTenuringThreshold=1'
]

// Common JVM arguments for client tasks
def clientJvmArgs = [
    '-Xmx2G',
    '-Xms512M',
    '-XX:+UseG1GC',
    '-XX:+ParallelRefProcEnabled',
    '-XX:MaxGCPauseMillis=200',
    '-XX:+UnlockExperimentalVMOptions',
    '-XX:+DisableExplicitGC',
    '-XX:G1NewSizePercent=30',
    '-XX:G1MaxNewSizePercent=40',
    '-XX:G1HeapRegionSize=8M',
    '-XX:G1ReservePercent=20',
    '-XX:G1HeapWastePercent=5',
    '-XX:G1MixedGCCountTarget=4',
    '-XX:InitiatingHeapOccupancyPercent=15',
    '-XX:G1MixedGCLiveThresholdPercent=90',
    '-XX:G1RSetUpdatingPauseTimePercent=5',
    '-XX:SurvivorRatio=32',
    '-XX:+PerfDisableSharedMem',
    '-XX:MaxTenuringThreshold=1',
    '-Dorg.lwjgl.util.Debug=true'
]

// Task to run the dedicated server (no GUI - headless mode)
tasks.register('runServer', JavaExec) {
    group = 'minecraft'
    description = 'Runs the Minecraft dedicated server (no GUI)'
    
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'net.minecraft.server.Main'
    
    workingDir = file('run')
    jvmArgs = serverJvmArgs
    args = ['--nogui']
    
    doFirst {
        workingDir.mkdirs()
    }
    
    standardInput = System.in
}

// Task to run the dedicated server with GUI
tasks.register('runServerGui', JavaExec) {
    group = 'minecraft'
    description = 'Runs the Minecraft dedicated server with GUI'
    
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'net.minecraft.server.Main'
    
    workingDir = file('run')
    jvmArgs = serverJvmArgs
    // No --nogui argument means GUI will be shown
    
    doFirst {
        workingDir.mkdirs()
    }
    
    standardInput = System.in
}

// Task to run the Minecraft client
tasks.register('runClient', JavaExec) {
    group = 'minecraft'
    description = 'Runs the Minecraft client'
    
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'net.minecraft.client.main.Main'
    
    workingDir = file('run')
    jvmArgs = clientJvmArgs
    
    // Required client arguments
    args = [
        '--version', '1.21.10',
        '--accessToken', '0',
        '--gameDir', file('run').absolutePath,
        '--assetsDir', file('run/assets').absolutePath
    ]
    
    doFirst {
        workingDir.mkdirs()
        file('run/assets').mkdirs()
        file('run/resourcepacks').mkdirs()
    }
    
    standardInput = System.in
}

// Task to create eula.txt
tasks.register('acceptEula') {
    group = 'minecraft'
    description = 'Creates eula.txt with EULA accepted (required to run server)'
    doLast {
        def runDir = file('run')
        runDir.mkdirs()
        def eulaFile = new File(runDir, 'eula.txt')
        eulaFile.text = '#By changing the setting below to TRUE you are indicating your agreement to our EULA (https://aka.ms/MinecraftEULA).\neula=true\n'
        println 'EULA accepted. You can now run the server.'
    }
}

// Ensure run directory and eula exist before running server
runServer.dependsOn acceptEula
runServerGui.dependsOn acceptEula

// Build task configuration
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
    options.fork = true
    options.forkOptions.memoryMaximumSize = "8g"
    options.compilerArgs += ['-Xlint:-deprecation', '-Xlint:-unchecked']
}

// Create a fat jar with all dependencies
tasks.register('fatJar', Jar) {
    group = 'build'
    description = 'Creates a fat JAR with all dependencies'
    archiveClassifier = 'all'
    
    from sourceSets.main.output
    
    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
    
    manifest {
        attributes 'Main-Class': 'net.minecraft.server.Main'
    }
    
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
